force-app/main/default/objects/SUPPORT_DEVICE_MNG__x/SUPPORT_DEVICE_MNG__x.object-meta.xml
<CustomObject>
    <description>SUPPORT_DEVICE_MNG</description>
    <externalDataSource>sights_dev_db</externalDataSource>
    <externalName>SUPPORT_DEVICE_MNG</externalName>
    <label>対応デバイス管理</label>
</CustomObject>