force-app/main/default/objects/SUPPORT_DEVICE_MNG__x/fields/maker__c.field-meta.xml
<CustomField>
    <fullName>maker__c</fullName>
    <description>maker</description>
    <externalDeveloperName>maker</externalDeveloperName>
    <label>maker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>