force-app/main/default/objects/SUPPORT_DEVICE_MNG__x/fields/product_no__c.field-meta.xml
<CustomField>
    <fullName>product_no__c</fullName>
    <description>product_no</description>
    <externalDeveloperName>product_no</externalDeveloperName>
    <label>product_no</label>
    <length>100</length>
    <type>Text</type>
</CustomField>