force-app/main/default/objects/SUPPORT_DEVICE_MNG__x/fields/software_mng_id__c.field-meta.xml
<CustomField>
    <fullName>software_mng_id__c</fullName>
    <description>software_mng_id</description>
    <externalDeveloperName>software_mng_id</externalDeveloperName>
    <label>software_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>