force-app/main/default/objects/SUPPORT_DEVICE_MNG__x/fields/support_device_mng_id__c.field-meta.xml
<CustomField>
    <fullName>support_device_mng_id__c</fullName>
    <description>support_device_mng_id</description>
    <externalDeveloperName>support_device_mng_id</externalDeveloperName>
    <label>support_device_mng_id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>